...
                guard let self else { return }
                self.restartGame()
                correctAnswers = 0
                self.questionFactory?.requestNextQuestion()
            }
            let viewModel = AlertModel(
                title: "Раунд завершен",
                message: alertText,
                buttonText: "Играть снова",
                completion: completion)
            viewController?.alertPresenter?.showAlert(result: viewModel)
        } else {
            self.switchToNextQuestion()
...
